theme/static/css/cocode.css
html, body {
    margin: 0;
    padding: 0;
}

html {
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
}

body {
    font-family:'Open Sans',sans-serif;
    font-weight:400;
    font-style:normal;
    color:#57565e;
    font-size:16px;
    line-height:1.6em;
}

a {
    color: #ed7859;
    text-decoration: none;
    border-bottom: 1px solid #f6d2cb;

    transition:.2s;
    -webkit-transition: 0.2s;

    transition-property: color, background, border-bottom;
    -webkit-transition-property: color, background, border-bottom;

    transition-timing-function: ease-in-out;
    -webkit-transition-timing-function: ease-in-out;
}

a:hover {
    color: #c04b2c;
    border-bottom: 1px solid #c04b2c;
}

h1 a, h2 a, h3 a, h4 a, h5 a { color: #2C2C2E; border: 0; }
h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover { color: #ed7859; border: 0; }

h2 {
    margin-top: 40px;
}

#blog_index h2, h1 {
    font-size: 30px;
    margin: 15px 0 0 0;
    line-height:1.3em;
}

header h1 {
    display: inline-block;

    margin: 20px;
    text-align: center;

    background: url(../images/logo_blog.png) bottom left no-repeat;
    background-size: 230px 75px;

    width: 230px;
    height: 75px;
}

header h1 a {
    display: block;
    text-indent: -9999px;
    width: 230px;
    height: 75px;
}

body#legal header h1 {
    background: url(../images/logo_legal.png) bottom left no-repeat;
    background-size: 230px 75px;
}

ul {
    padding: 0 28px;
    margin: 0;
}

blockquote {
    border-left: 5px solid #E9E9E7;
    padding-left: 15px;
    margin-left: 15px;
    font-style: italic;
}

header {
    background: #2B2622 url(../images/bg-bottom.jpg) bottom no-repeat;
    background-size: 100% auto;

    height: 280px;
    width: 100%;

    margin-bottom: 50px;
}

section {
    margin: auto;
    max-width: 700px;
    padding: 0 40px;
}

footer {
    font-size: 0.8em;
    margin: 10px auto;
}

footer ul {
    list-style: none;
    padding: 15px 0;
    /*
    border-top: 1px solid #E9E9E7;
    */
}

footer ul li {
    display: inline-block;
    padding-right: 15px;
    margin-bottom: 30px;
}

footer ul li a {
    border: 0;
}

.timeline {
    display: block;
    width: 4px;
    background: rgba(255,255,255,0.4);
    height: 100px;
    position: absolute;
    margin: 81px 0 0 -104px;
}

article {
    padding-bottom: 50px;
    padding-top: 17px;
    border-bottom: 1px solid #E9E9E7;
    overflow: visible !important;
    overflow-y: hidden !important;
}

article:first-of-type {
    margin-top: -35px;
}

article:last-child {
    border-bottom: 0;
}

ul.meta {
    list-style: none;
    margin: 0px 0 9px 0;
    padding: 0;
}

ul.meta li {
    color: #989899;
    display: inline-block;
    font-size: 13px;
    margin: 0;
    padding: 0;
}

ul.meta li + li::before {
    content: "";
    background: #e9e9e7;
    display: block;
    border-radius:1px;
    width:5px;
    height:5px;
    margin: 10px;
    float: left;
}

article img {
    max-width: 100% !important;
}
ul.tags {
    margin-top: 35px;
    list-style: none;
    padding: 0;
}

ul.tags:before {
    content: "Tags:";
    margin-right: 10px;
    font-weight: bold !important;
}

ul.tags li {
    display: inline-block;
}

ul.tags li:before {
    display: none;
}

ul.tags li a {
    background: #f2f2f2;
    padding: 3px 5px 3px 5px;
    color: #A4A4A4;
    border: none;
    border-radius: 3px;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 12px;
    margin-right: 5px;
    padding: 4px 10px;
}

ul.tags li a:hover {
    background: #ed7859;
    color: #fff;
    border: none;
}

.comments {
    margin-top: 50px;
    padding-top: 15px;
    border-top: 1px solid #E9E9E7;
}

.card {
    position: relative;
    border-top: 1px solid #E9E9E7;
    padding: 45px 5px 0px;
    display: block;
    margin-top: 50px;
}

.card img {
    border-radius: 95px;
    height: 70px;
    width: 70px;
    display: block;
    position: absolute;
    left: 25px;
    top: 35px;
}

.card .author {
    margin-left: 105px;
    width: auto !important;
}

.card .date {
    max-width: 177px;
    position: absolute;
    right: 25px;
    top: 45px;
    text-align: right;
}

.card a {
    border: 0;
    color: #2C2C2E;
}

.card p {
    font-style: italic;
    color: #b3b3b1;
    margin: 0;
}

article img {
    max-width: 100% !important;
    height: auto !important;
    width: auto\9!important; /* ie8 */
}

pre {
    background: #eee;
    border-radius: 5px;
    padding: 10px;
    color: #a4a4a4;
    max-width: 100% !important;
    min-width: 0px !important;
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    word-wrap: break-word;
}


/* Disable selection of all elements except the ones that are interesting */
* {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

article *  {
    -webkit-touch-callout: text;
    -webkit-user-select: text;
    -khtml-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
    user-select: text;
}

article > a, .tags, .tags * {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

::selection { background: #ed7859; color: #ffffff; }
::-moz-selection { background: #ed7859; color: #ffffff; }

@media screen and (min-width: 1000px) {
    /* >1000px has sidebar header */

    header {
        position: fixed;
        background: url(../images/bg-bottom.jpg) bottom no-repeat,
                    url(../images/bg-repeat.jpg);
        background-size: 100% auto;
        height:100%;
        float: left;
        width: 370px;
        top: 0;
    }

    section {
        padding: 0 47px;
        margin-left: 315px;
        margin-top: 100px;
        padding-left: 100px;
        position: absolute;
        z-index: 2;
    }

    .timeline-bullet {
        background: url(../images/timeline-bullet.png);
        background-size: 60px 68px;
        width: 60px;
        height: 63px;
        position: absolute;
        margin: 30px 0 0 -132px;
        opacity: 0.4;
        text-align: center;
        padding-top: 5px;
    }

    .timeline-bullet:first-child {
        background-position: 0 -5px;
        height: 63px;
        margin: 0 0 0 -132px;
        padding-top: 0px;
    }

    div[class*='icon']:after {
        content: "";
        display: inline-block;
        background: url(../images/icon-general.png) no-repeat;
        background-size: 24px 24px;
        width: 24px;
        height: 63px;
        background-position: center center;
    }

    .icon-apps:after {
        content: "";
        display: inline-block;
        background: url(../images/icon-apps.png) no-repeat !important;
        background-position: center center !important; 
        background-size: 24px 26px !important;
        width: 26px !important;
        height: 57px !important;
    }

    .icon-date:after {
        content: "";
        display: inline-block;
        background: url(../images/icon-date.png) no-repeat !important;
        background-position: center center !important; 
        background-size: 24px 24px !important;
        width: 24px !important;
        height: 57px !important;
    }

    .icon-event:after {
        content: "";
        display: inline-block;
        background: url(../images/icon-event.png) no-repeat !important;
        background-position: center center !important; 
        background-size: 17px 24px !important;
        width: 17px !important;
        height: 57px !important;
    }

    .icon-labs:after {
        content: "";
        display: inline-block;
        background: url(../images/icon-labs.png) no-repeat !important; 
        background-position: center center !important; 
        background-size: 21px 35px !important;
        width: 21px !important;
        height: 57px !important;
    }

    .icon-love:after {
        content: "";
        display: inline-block;
        background: url(../images/icon-love.png) no-repeat !important; 
        background-position: center center !important; 
        background-size: 24px 21px !important;
        width: 24px !important;
        height: 62px !important;
    }

    .icon-picture:after {
        content: "";
        display: inline-block;
        background: url(../images/icon-picture.png) no-repeat !important; 
        background-position: center center !important; 
        background-size: 24px 21px !important;
        width: 24px !important;
        height: 57px !important;
    }

    .icon-user:after {
        content: "";
        display: inline-block;
        background: url(../images/icon-user.png) no-repeat !important;
        background-position: center center !important; 
        background-size: 24px 26px !important;
        width: 26px !important;
        height: 24px !important;
    }
}

@media screen and (max-width: 550px) {
    header {
        height: 150px;
        margin-bottom: 10px;
        text-align: center;
    }

    header h1 {
        width: 85px;
        margin: 35px auto;
    }

    header h1 a {
        width: 75px;
    }

    section {
        padding: 20px;
    }

    .summary:before {
        margin-right: 10px;
    }

    article:before {
        display: none;
    }

    article > ul > li:last-child {
        display: none;
    }

    .timeline-bullet {display: none;}

    .card .date {
        display: none;
    }
}

/* different sidebar for article on large version */
@media screen and (min-width: 1000px) {
    header.small {
        margin-left: -250px;
    }

    header.small h1 {
        width: 85px;
        position: fixed;
        top: 0px;
        left: 0px;
    }

    header.small h1 a {
        width: 75px;
        height: 120px;
        position: relative;
        z-index: 3;
    }

    header.small h1:after {
        content: "← go back";
        color: #b2aaaa;
        font-size: 14px;
        display: block;
        margin: -40px 0 0 -3px;
        position: relative;
        z-index: 2;
    }

    section#large {
        padding-left: 0;
        margin-left: 180px;
        margin-top: 50px;
        max-width: 750px;
    }

    section#large article:before {
        display: none;
    }
}

/* homepage */

body#homepage em {
    font-weight: normal;
}

body#homepage {
    margin: 0px;
    padding: 0px;
    background: #312a29;
    background-image: url(../images/background_middle.jpg), url(../images/background_repeatable.jpg);
    background-repeat: no-repeat, repeat;
    background-attachment: fixed;
    background-position: 80% 70%;
    background-size: auto 100%;
}

body#homepage h1 {
    background: url(../images/logo_home.png) no-repeat;
    position: fixed;
    background-size: 307px 296px;
    background-position: center center;
    width: 307px;
    height: 296px;
    top: 32%;
    left: 50%;
    margin-top: -68px;
    margin-left: -153px;
    opacity: 0.7;
    transition: opacity .3s ease-in-out;
    -moz-transition: opacity .3s ease-in-out;
    -webkit-transition: opacity .3s ease-in-out;
    text-indent: -9999px;
}

body#homepage h1:hover {
    opacity: 1;
}

body#homepage p {
    position: absolute;
    display: block;
    text-align: center;
    left: 0;
    right: 0;
    top: 32%;
    margin-top: 200px;
    color: white;
    font-size: 18px;
    font-weight: bold;
    opacity: 0.6;
}

body#homepage a {
    color: #ed7859;
    text-decoration: none;
}

